--- a/DiageoMDMWeb/src/main/webapp/outlet/createChain.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/outlet/createChain.xhtml
@@ -34,7 +34,7 @@
                         <h:panelGrid columns="4" style="width: 100%">
                             <h:outputLabel value="#{msg.out_kiernan}" style="width: 100%;padding: 15%" styleClass="tamanio_letra_labels"/>
                             <h:panelGroup>
-                                <p:inputText id="itKiernan" value="#{createChainBean.kiernan}" required="true" label="#{msg.out_kiernan}"/>
+                                <p:inputText id="itKiernan" value="#{createChainBean.kiernan}" required="false" label="#{msg.out_kiernan}"/>
                                 <p:message for="itKiernan"/>
                             </h:panelGroup>
                             <h:outputLabel value="#{msg.chain_name}" style="width: 100%;padding: 15%" styleClass="tamanio_letra_labels"/>
